# shooting

./: 1137.jpg.import  CMakeLists.txt  Soccer Ball.png.import  ball.tscn  bottom_player.tscn  field.tscn  football-player.jpg.import  icon.svg.import  main.tscn  man-playing-football.jpg.import  pngwing.com-7.png.import  pngwing.com-8.png.import  project.godot  soccer_ball.tscn  top_player.tscn
cpp/: BottomPlayer.cpp  BottomPlayer.h  bottomplayer.gdextension.tres
